[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greener"
version = "0.1.0"
description = "Fill your GitHub contribution graph with custom commits"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nevo" },
]
keywords = ["github", "contribution-graph", "git", "commits"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/iknevo/greener-cli"
Repository = "https://github.com/iknevo/greener-cli"

[project.scripts]
greener = "greener.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
